# job-portal

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  tox.ini
graphene_start/: Dockerfile  database_config.py  main.py  prestart.sh
graphene_start/alembic/: README  env.py
graphene_start/alembic/versions/: 62a5bbd475c2_employer_and_job.py
graphene_start/app/: database_config.py  main.py  security.py  settings.py
graphene_start/app/alembic/: env.py
graphene_start/app/alembic/versions/: 26c5b0c5c757_job_applications_table.py  67c030842902_user_with_hashed_password.py
graphene_start/app/database/: __init__.py  init_db.py
graphene_start/app/gql/: __init__.py  mutations.py  queries.py  types.py
graphene_start/app/gql/employer/: __init__.py  mutations.py  queries.py
graphene_start/app/gql/job_application/: queries.py
graphene_start/app/models/: __init__.py  employer.py  job.py  job_application.py  user.py
graphene_start/app/respositories/: __init__.py  employers.py  job_applications.py  jobs.py  users.py
graphene_start/models/: employer.py  job.py
job_portal/: Dockerfile  alembic.ini  prestart.sh
job_portal/app/: deps.py  enums.py  main.py  security.py  settings.py
job_portal/app/alembic/: env.py
job_portal/app/database/: __init__.py  init_db.py
job_portal/app/gql/: __init__.py  mutations.py  queries.py  types.py
job_portal/app/models/: employer.py  user.py
job_portal/app/respositories/: base.py  job_applications.py  jobs.py  users.py
job_portal/initial_examples/: users_example.py
(+12 files in other folders)
