[tool.poetry]
name = "graphene-start"
version = "0.1.0"
description = ""
authors = ["Pau Duran <pauduranmanzano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphene = "3.2.2"


[tool.poetry.group.dev.dependencies]
tox = "^4.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
